--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -18,10 +18,17 @@
 <!-- <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css"> -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.min.js"></script>
+<script src="http://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
   $( function() {
      
     /* $( "#dialog" ).dialog(); */
+    $('.makeGroup').hover(function(){
+       $(this).css("cursor","pointer")
+    },function(){
+       $(this).css("cursor","")
+    })
     $('.plusGroup').hover(function(){
        $(this).css("cursor","pointer")
     },function(){
@@ -29,21 +36,31 @@
     })
     
     // 아이콘 클릭시 처리 
+    $('.makeGroup').click(function(){
+       let no=$(this).attr("data-id");
+       $.ajax({
+          success:function(res)
+          {
+             console.log(res);
+            
+             
+             $('#dialog').dialog({
+                autoOpen:false,
+                width:600,
+                height:600,
+                modal:true
+             }).dialog("open");
+          }
+       })
+    })
     $('.plusGroup').click(function(){
        let no=$(this).attr("data-id");
        $.ajax({
-          /* type:'get', */
-          /* url:'/makegroup', */
-          /* data:{'id':id}, */
           success:function(res)
           {
              console.log(res);
              
-            /*  //let json=JSON.parse(res);
-             $('#youtube').attr("src","http://youtube.com/embed/"+res.youtube)
-             $('#lyric').text(res.lyric) */
-             
-             $('#dialog').dialog({
+             $('#dialog2').dialog({
                 autoOpen:false,
                 width:600,
                 height:600,
@@ -75,12 +92,23 @@
 		</button>
 		<button class="enterBtn">그룹 추가하기</button>
 	</div>
+	<div class="oneGroupwithBtn">	
+		<button class="makeGroup" th:data-id="${id}">
+			<p class="gPlus">+</p>
+		</button>
+		<button class="enterBtn">그룹 생성하기</button>
+	</div>
 		<!-- <div class="makeGroup">
 			<p class="gMake">+</p>
 		</div> -->
 	</div>
 	
 	
+	
+	
+	
+	
+	<!-- 마니또 생성하기 -->
 	<div class="dialog" id="dialog" style="display:none"> 
 		<div class="dialogSubject">새로운 마니또 그룹 만들기</div>
 		<div class="dialogbg">
@@ -113,6 +141,51 @@
 			</div>
 		 </form>
 		</div>
+	</div>\
+	
+	
+	
+	
+	<!-- 마니또 추가하기 -->
+	<div class="dialog2" id="dialog2" style="display:none"> 
+		<div class="dialogSubject">마니또 그룹 추가하기</div>
+		<div class="dialogbg">	
+				<div class="mgTitles">
+					<p>그룹 코드 입력하기</p>
+					<input type="text" id="groupCode" v-model="groupCode" size=50>
+					<button id="findGroup" class="findGroup" v-on:click="findGroup()">그룹 찾기</button>
+				</div>
+				<div class="findingResult">
+					<p class="results" v-model="groupResult"></p>
+				</div>
+			<form method="post">
+				<div class="dialogTitle">
+					<button class="makeBtn">추가하기</button>
+					<button class="cancelBtn">취소하기</button>
+				</div>
+			</form>
+		</div>
 	</div>
+	<script>
+	new Vue({
+		el:'.dialog2',
+		data:{
+			groupCode:'',
+			groupResult:''
+		},
+		methods:{
+			findGroup:function(){
+				axios.get("../group/main/groupfinding",{
+					params:{
+						groupCode:this.groupCode
+					}
+				}).then(res=>{
+					console.log(res.data);
+					this.groupResult=res.data;
+				})
+			}
+		}
+	})
+	</script>
 </body>
 </html>
