--- a/ManiMani/src/main/resources/static/css/board.css
+++ b/ManiMani/src/main/resources/static/css/board.css
@@ -14,7 +14,7 @@ body{
 	width: 90%;
 	height: 720px;
 	border-radius: 30px;
-	border: 1.5px solid #494949;
+/*	border: 15px solid #fd9c87; */
 	background-color: white;
 	margin: 20px 50px auto;
 	padding : 30px;
@@ -22,14 +22,23 @@ body{
 }
 
 .board_head {
+	height: 95px;
+	padding: 20px;
+}
+
+.board_name {
 	position: relative;
-	height: 50px;
-	font-size: 40px;
-	color: #93b8ef;
+	font-size: 35px;
+	color: white;
 	font-family: 'Noto Sans KR', sans-serif;
 	text-align: center;
-	margin: 20px 0px 50px 0px;
+	border-radius: 15px;
+	background-color: #93b8ef;
+	    padding: 5px 10px;
+	margin: 20px 50px;
 }
+
+/*--- 테이블 ---*/
 
 .table_whole {
 	text-align: center;
@@ -38,34 +47,53 @@ body{
 
 .column-1 {
   width: 150px;
-  height: 30px;
+  height: 50px;
   text-align: center;
+  font-size: 25px;
 }
 
 .column-2 {
   width: 150px;
   height: 30px;
   text-align: center;
+  font-size: 25px;
 }
 
 .column-3 {
   width: 350px;
   height: 30px;
   text-align: center;
+  font-size: 25px;
 }
 
 .column-4 {
   width: 200px;
   height: 30px;
   text-align: center;
+  font-size: 25px;
 }
 
 .column-5 {
   width: 150px;
   height: 30px;
   text-align: center;
+  font-size: 25px;
 }
 
 .table_content {
-	
+  height: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+/*--- 작성하기 버튼 ---*/
+
+.write {
+	float: right;
+	font-size: 20px;
+	text-align: center;
+    border: 1.5px solid #494949;
+    background-color: #fd9c87;
+    color: white;
+    display: inline-block;
 }
