--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -119,7 +119,7 @@
 			</div>
 			<div class="Gnum">
 			<div class="dialogTitle">그룹인원</div>
-				<div class="dialogContent"><input type="number" id="person">명</div>
+				<div class="dialogContent1"><input type="number" id="person">명</div>
 			</div>
 			
 			<div class="dialogTitle">그룹설명</div>
