group/main.html 마니또 생성button 수정

--- a/ManiMani/src/main/resources/templates/group/main.html
+++ b/ManiMani/src/main/resources/templates/group/main.html
@@ -136,8 +136,8 @@
 			</div>
 				
 			<div class="dialogTitle">
-				<button class="makeBtn">생성하기</button>
-				<button class="cancelBtn">취소하기</button>
+				<input type="submit" class="makeBtn" value="생성하기">
+				<button class="cancelBtn" data-dismiss="modal" aria-label="Close">취소하기</button>
 			</div>
 		 </form>
 		</div>
